k8s/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-ptc-service
spec:
  selector:
    app: hello-ptc
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
